--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="portfolio.html" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About Me</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="skills.html">My Skills</a></li>
@@ -40,3 +40,4 @@
 
 </body>
 </html>
+
