--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="portfolio.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About Me</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="skills.html">My Skills</a></li>
@@ -34,7 +34,7 @@
         web development, and creative projects.
     </p>
     </div>
-    <a href="portfolio.html" class="back-btn">⬅ Back to Home</a>
+    <a href="index.html" class="back-btn">⬅ Back to Home</a>
 </main>
 
 <footer>
@@ -43,3 +43,4 @@
 
 </body>
 </html>
+
