--- a/achievements.html
+++ b/achievements.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="portfolio.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="skills.html">Skills</a></li>
@@ -31,7 +31,7 @@
         <p>NPTEL certification on Data Structures and Algorithms using Java</p>
     </div>
 
-    <a href="portfolio.html" class="back-btn">⬅ Back to Home</a>
+    <a href="index.html" class="back-btn">⬅ Back to Home</a>
 </main>
 
 <footer>
@@ -40,3 +40,4 @@
 
 </body>
 </html>
+
