--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="portfolio.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="skills.html">Skills</a></li>
@@ -32,7 +32,7 @@
         <p>Phone:    6282941045</p>
     </div>
 
-    <a href="portfolio.html" class="back-btn">⬅ Back to Home</a>
+    <a href="index.html" class="back-btn">⬅ Back to Home</a>
 </main>
 
 <footer>
@@ -41,3 +41,4 @@
 
 </body>
 </html>
+
