--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="portfolio.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="skills.html">Skills</a></li>
@@ -35,7 +35,7 @@
         </ol>
     </div>
 
-    <a href="portfolio.html" class="back-btn">⬅ Back to Home</a>
+    <a href="index.html" class="back-btn">⬅ Back to Home</a>
 </main>
 
 <footer>
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
