--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="portfolio.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="skills.html" class="active">Skills</a></li>
@@ -45,7 +45,7 @@
         </ul>
     </div>
 
-    <a href="portfolio.html" class="back-btn">⬅ Back to Home</a>
+    <a href="index.html" class="back-btn">⬅ Back to Home</a>
 </main>
 
 <footer>
@@ -54,3 +54,4 @@
 
 </body>
 </html>
+
